k8s/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: notes-app
spec:
  # Headless service — потребен за StatefulSet
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
